nuclearbomb/default/socials/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: socials
  namespace: default
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "socials.hiibolt.com"
  rules:
    - backendRefs:
        - name: socials
          port: 4000
